# ssn

./: .gitignore  README  SSN_catalog.sample  SSN_long.txt  pyproject.toml  setup.py  ssn.py  stations_ssn.csv
ssn/: __init__.py  interpolate_gc.py
ssn.egg-info/: PKG-INFO  SOURCES.txt
